--- a/Checkout/Checkout.css
+++ b/Checkout/Checkout.css
@@ -275,7 +275,7 @@ input::placeholder{
 #coupon_applied_sucess{
     font-size: 16px;
     margin-top: 8px;
-    color: #00796B;
+    color: #26A69A;
     font-weight: 600;
 }
 #coupon_not_applied{
@@ -462,4 +462,52 @@ input::placeholder{
     margin-top: 20px;
     margin-bottom: 30px;
 }
+#coupon_div{
+    position: absolute;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0,0.7);
+   /* opacity: 0.7; */
+   top:0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   display: none;
+}
+#coupon_inner_div{
+    width: 500px;
+    height: 300px;
+    background-color: white;
+    border-radius: 5px;
+    display: flex;
+    flex-direction:column ;
+    justify-content: center;
+    align-items: center;
+    
 
+}
+
+#coupon_id{
+    width: 50%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px dashed #D81B60;
+    font-size: 30px;
+    margin-bottom: 60px;
+}
+#coupon_inner_div > p:first-child{
+    margin-bottom: 30px;
+    font-size: 25px;
+}
+#coupon_inner_div > button{
+    
+    width: 90px;
+    height: 45px;
+    background-color: black;
+    border: none;
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
+}
